# reflex-chakra

./: .gitignore  README.md  pyproject.toml  regenerate_pyi.py
.github/workflows/: ci.yml  export_docs.yml  publish.yml
docs/rcweb/: .gitignore  requirements.txt  rxconfig.py
docs/rcweb/rcweb/: rcweb.py
examples/chatroom/chatroom/: chatroom.py
examples/clock/clock/: clock.py
examples/crm/: rxconfig.py
examples/crm/crm/: crm.py
examples/dalle/dalle/: dalle.py
examples/datatable_tutorial/datatable_tutorial/: datatable_tutorial.py
examples/ecommerce/ecommerce/: ecommerce.py
examples/fragments/fragments/: fragments.py
examples/local_auth/local_auth/: auth_session.py  local_auth.py  login.py  registration.py
examples/nba/nba/: helpers.py  nba.py
examples/qr-scanner/: requirements.txt
examples/qr-scanner/qr_scanner/: component.py  qr_scanner.py
examples/quiz/quiz/: quiz.py  results.py
examples/random-number-range/random_number_range/: random_number_range.py
examples/sales/sales/: sales.py
examples/stable_diffusion/stable_diffusion/: stable_diffusion.py  styles.py
examples/tailwind/tailwind/: tailwind.py
examples/translator/translator/: translator.py
integration/: test_form_submit.py  test_table.py
reflex_chakra/: __init__.py  constants.py
reflex_chakra/assets/: chakra_color_mode_provider.js
reflex_chakra/components/: __init__.py  base.py  base.pyi
reflex_chakra/components/datadisplay/: __init__.py  badge.py  badge.pyi  code.pyi  divider.py  divider.pyi  keyboard_key.pyi  list.py  list.pyi  stat.py  stat.pyi  table.py  table.pyi  tag.py  tag.pyi
reflex_chakra/components/disclosure/: __init__.py  accordion.py  accordion.pyi  tabs.py  tabs.pyi  transition.py  transition.pyi  visuallyhidden.pyi
reflex_chakra/components/feedback/: __init__.py  alert.py  alert.pyi  circularprogress.py  circularprogress.pyi  progress.py  progress.pyi  skeleton.py  skeleton.pyi  spinner.py  spinner.pyi
reflex_chakra/components/forms/: __init__.py  button.py  button.pyi  checkbox.py  checkbox.pyi  colormodeswitch.py  colormodeswitch.pyi  date_picker.py  date_picker.pyi  date_time_picker.py  date_time_picker.pyi  editable.py  editable.pyi  email.py  email.pyi  form.py  form.pyi  iconbutton.py  iconbutton.pyi  input.py  input.pyi  multiselect.py  numberinput.py  numberinput.pyi  password.py  password.pyi  pininput.py  pininput.pyi  radio.py  radio.pyi  rangeslider.py  rangeslider.pyi  select.py  select.pyi  slider.py  slider.pyi  switch.py  switch.pyi  textarea.py  textarea.pyi  (+2 more)
reflex_chakra/components/layout/: __init__.py  aspect_ratio.py  aspect_ratio.pyi  box.py  box.pyi  card.py  card.pyi  center.pyi  container.py  container.pyi  flex.py  flex.pyi  grid.py  grid.pyi  spacer.pyi  stack.py  stack.pyi  wrap.py  wrap.pyi
reflex_chakra/components/media/: __init__.py  avatar.py  avatar.pyi  icon.py  icon.pyi  image.py  (+1 more)
tests/components/: base.py
(+106 files in other folders)
