[project]
name = "reflex-chakra"
version = "0.8.0"
description = "reflex using chakra components"
authors = [{ name = "Elijah Ahianyo", email = "elijahahianyo@gmail.com" }]
maintainers = [
    { name = "Khaleel Al-Adhami", email = "khaleel@reflex.dev" },
    { name = "Masen Furer", email = "masen@reflex.dev" },
    { name = "Thomas Brandeho", email = "thomas@reflex.dev" },
]
readme = "README.md"
requires-python = ">=3.10"
license.text = "Apache-2.0"
dependencies = ["reflex >=0.8.0a"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["reflex_chakra"]

[tool.ruff]
target-version = "py310"

[tool.pyright]
