[project]
name = "reflex-chakra"
version = "0.8.1"
description = "reflex using chakra components"
authors = [{ name = "Elijah Ahianyo", email = "elijahahianyo@gmail.com" }]
maintainers = [
    { name = "Khaleel Al-Adhami", email = "khaleel@reflex.dev" },
    { name = "Masen Furer", email = "masen@reflex.dev" },
    { name = "Thomas Brandeho", email = "thomas@reflex.dev" },
]
readme = "README.md"
requires-python = ">=3.10"
license.text = "Apache-2.0"
dependencies = ["reflex >=0.8.0dev"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["reflex_chakra"]

[dependency-groups]
dev = ["ruff", "pyright"]

[tool.ruff]
target-version = "py310"
lint.select = ["ALL"]
lint.pydocstyle.convention = "google"
lint.ignore = [
    "A",
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN2",
    "ANN4",
    "BLE",
    "COM",
    "E501",
    "ERA001",
    "F403",
    "F405",
    "FBT",
    "PLR",
    "PLW",
    "PYI021",
    "S307",
    "SLF",
    "TC002",
    "UP038",
]
lint.allowed-confusables = ["’"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["D301", "D415", "D417", "N803"]
"docs/*" = ["D", "INP001"]

[tool.pyright]
reportIncompatibleMethodOverride = "warning"
